--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <springframework.version>5.0.4.RELEASE</springframework.version>
         <springsecurity.version>5.0.3.RELEASE</springsecurity.version>
+        <c3po.version>0.9.5.2</c3po.version>
     </properties>
 
     <dependencies>
@@ -69,16 +70,16 @@
         </dependency>
 
         <!-- C3PO -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-c3p0</artifactId>
             <version>5.2.16.Final</version>
+        </dependency>-->
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>${c3po.version}</version>
         </dependency>
-        <!--<dependency>
-             <groupId>com.mchange</groupId>
-             <artifactId>c3p0</artifactId>
-             <version>${c3po.version}</version>
-         </dependency>-->
 
         <!-- Spring Transactions -->
         <dependency>
